--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -212,7 +212,7 @@
     "            target = np.zeros(nlabels)\n",
     "            target[yi] = 1.0\n",
     "        \n",
-    "            grad = (target - o).reshape(nlabels, 1) @ xi.reshape(1, dim)\n",
+    "            grad = (target - o).reshape(nlabels, 1) @ xi.reshape(1, -1)\n",
     "            \n",
     "            w = w+ eta_t * grad\n",
     "            \n",
