--- a/lab2/Santatriniaina_Avotra_Randrianambinina_intro_to_wordvectors.ipynb
+++ b/lab2/Santatriniaina_Avotra_Randrianambinina_intro_to_wordvectors.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Santatriniaina Avotra Randrianambinina"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "<h1 style=\"font-family:verdana;font-size:300%;text-align:center;background-color:#f2f2f2;color:#0d0d0d\">AMMI NLP - Review sessions</h1>\n",
     "\n",
@@ -19,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +61,8 @@
      "text": [
       "\n",
       " ** Word vectors ** \n",
-      "\n"
+      "\n",
+      "<class 'numpy.ndarray'> 300\n"
      ]
     }
    ],
@@ -69,15 +77,15 @@
     "word_vectors is a dictionary that maps words to their numerical word vector\n",
     "[word (string)] = [np-array] \n",
     "'''\n",
-    "word_vectors = load_vectors('wiki.en.vec')\n",
-    "print(word_vectors)\n",
+    "word_vectors = load_vectors('./data/wiki.en.vec')\n",
+    "# print(word_vectors['tree'])\n",
     "tree_vector = word_vectors['tree']\n",
     "print(type(tree_vector), len(tree_vector))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,13 +103,12 @@
     "\n",
     "    ## FILL CODE\n",
     "    cos = np.dot(u, v)/(np.linalg.norm(u) * np.linalg.norm(v))\n",
-    "    return cos\n",
-    "\n"
+    "    return cos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,15 +157,19 @@
     "    '''\n",
     "    best_score = -1.0\n",
     "    best_word = None\n",
-    "\n",
     "    ## FILL CODE\n",
-    "    \n",
+    "    for word, v in word_vectors.items():\n",
+    "#         print(word)\n",
+    "        score_similarity=cosine(x,v)\n",
+    "        if score_similarity>best_score and word not in exclude_words:\n",
+    "            best_score=score_similarity\n",
+    "            best_word=word\n",
     "    return best_word"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -166,18 +177,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      ",\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "can only concatenate str (not \"NoneType\") to str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/hr/6w38l07x00n52k06db9zpqz40000gn/T/ipykernel_806/1388610729.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m print('The nearest neighbor of cat is: ' +\n\u001b[0m\u001b[1;32m      3\u001b[0m       nearest_neighbor(word_vectors['cat'], word_vectors, exclude_words = ['cat', 'cats']))\n",
-      "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"NoneType\") to str"
+      "The nearest neighbor of cat is: dog\n"
      ]
     }
    ],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,18 +216,38 @@
     "    Returns: \n",
     "    k_nearest_neighbors (list of tuples): [(score, word), (score, word), ....]\n",
     "    '''\n",
-    "\n",
-    "    k_nearest_neighbors = None\n",
+    "    k_nearest_neighbors = []\n",
+    "    exclude_words=[]\n",
     "    ## FILL CODE\n",
-    "        \n",
+    "    for l in range(k):\n",
+    "        best_word=nearest_neighbor(x,word_vectors,exclude_words)\n",
+    "        score_similarity=cosine(x,vectors[best_word])\n",
+    "        Tuple=(score_similarity,best_word)\n",
+    "        k_nearest_neighbors.append(Tuple)\n",
+    "        exclude_words.append(best_word)\n",
     "    return k_nearest_neighbors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 166,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "cat\n",
+      "--------------\n",
+      "cat\t1.000\n",
+      "cats\t0.732\n",
+      "dog\t0.638\n",
+      "pet\t0.573\n",
+      "rabbit\t0.549\n"
+     ]
+    }
+   ],
    "source": [
     "knn_cat = knn(word_vectors['cat'], word_vectors, 5)\n",
     "print('')\n",
@@ -248,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,15 +289,32 @@
     "    '''\n",
     "    \n",
     "    ## FILL CODE\n",
+    "    va=word_vectors[a]\n",
+    "    vb=word_vectors[b]\n",
+    "    vc=word_vectors[c]\n",
+    "    \n",
+    "    va = va/np.linalg.norm(va)\n",
+    "    vb = vb/np.linalg.norm(vb)\n",
+    "    vc = vc/np.linalg.norm(vc)\n",
     "\n",
-    "    return None"
+    "    d=vc+vb-va\n",
+    "    return nearest_neighbor(d,word_vectors,[a,b,c])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 168,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "france - paris + rome = italy\n"
+     ]
+    }
+   ],
    "source": [
     "# Word analogies\n",
     "\n",
@@ -294,9 +331,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 169,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "similarity(genius, man) = 0.445\n",
+      "similarity(genius, woman) = 0.325\n"
+     ]
+    }
+   ],
    "source": [
     "## A word about biases in word vectors:\n",
     "\n",
@@ -309,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,13 +381,21 @@
     "    part_b = 0.0 \n",
     "    \n",
     "    ## FILL CODE\n",
-    "\n",
+    "    for a in A:\n",
+    "        part_a += cosine(vectors[w], vectors[a])\n",
+    "    part_a/=len(A) \n",
+    "    \n",
+    "    for b in B:\n",
+    "        part_b += cosine(vectors[w], vectors[b])\n",
+    "    part_b/=len(B)\n",
+    "    \n",
+    "    strength = part_a - part_b\n",
     "    return strength"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,19 +415,34 @@
     "    Returns: \n",
     "    score (float): the value of the group association strength  \n",
     "    '''\n",
-    "    \n",
+    "    part_x = 0.0\n",
+    "    part_y = 0.0 \n",
     "    score = 0.0\n",
-    "    \n",
     "    ## FILL CODE\n",
-    "\n",
+    "    for x in X:\n",
+    "        part_x += association_strength(x, A, B, vectors)\n",
+    "        \n",
+    "    for y in Y:\n",
+    "        part_y += association_strength(y, A, B, vectors)\n",
+    "    \n",
+    "    score = part_x - part_y\n",
     "    return score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 172,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Word embedding association test: 0.847\n"
+     ]
+    }
+   ],
    "source": [
     "## Replicate one of the experiments from:\n",
     "##\n",
@@ -404,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,19 +496,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 174,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('the', 'le'), ('the', 'les'), ('the', 'la'), ('and', 'et'), ('was', 'fut')]\n"
+     ]
+    }
+   ],
    "source": [
-    "word_vectors_en = load_vectors('wiki.en.vec')\n",
-    "word_vectors_fr = load_vectors('wiki.fr.vec')\n",
-    "lexicon = load_lexicon(\"lexicon-en-fr.txt\")\n",
+    "word_vectors_en = load_vectors('./data/wiki.en.vec')\n",
+    "word_vectors_fr = load_vectors('./data/wiki.fr.vec')\n",
+    "lexicon = load_lexicon(\"./data/lexicon-en-fr.txt\")\n",
     "print(lexicon[:5])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,15 +551,33 @@
     "    x_en, x_fr = [], []\n",
     "    \n",
     "    ## FILL CODE\n",
+    "    for w in lexicon:\n",
+    "        x_en.append( word_vectors_en[w[0]])\n",
+    "        x_fr.append( word_vectors_fr[w[1]])\n",
+    "        \n",
+    "    x_en = np.array(x_en)\n",
+    "    x_fr = np.array(x_fr)\n",
+    "\n",
+    "    M = np.linalg.lstsq(x_en, x_fr)[0]\n",
     "    \n",
-    "    return None"
+    "    return M"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 177,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/hr/6w38l07x00n52k06db9zpqz40000gn/T/ipykernel_897/3618655050.py:21: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
+      "  M = np.linalg.lstsq(x_en, x_fr)[0]\n"
+     ]
+    }
+   ],
    "source": [
     "mapping = align(word_vectors_en, word_vectors_fr, lexicon)"
    ]
@@ -495,9 +591,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 178,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'lapin'"
+      ]
+     },
+     "execution_count": 178,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def translate(word, word_vectors_en, word_vectors_fr, mapping):\n",
     "    '''\n",
@@ -512,15 +619,30 @@
     "    '''\n",
     "    \n",
     "    ## FILL CODE\n",
+    "    eng_vec=word_vectors_en[word]\n",
+    "    fr_vec=eng_vec@mapping\n",
+    "    near_neighbor=nearest_neighbor(fr_vec,word_vectors_fr)\n",
     "\n",
-    "    return None"
+    "    return near_neighbor\n",
+    "trans=translate(word, word_vectors_en, word_vectors_fr, mapping)\n",
+    "trans"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 179,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "monde\n",
+      "machine\n",
+      "apprentissage\n"
+     ]
+    }
+   ],
    "source": [
     "print(translate(\"world\", word_vectors_en, word_vectors_fr, mapping))\n",
     "print(translate(\"machine\", word_vectors_en, word_vectors_fr, mapping))\n",
@@ -536,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,86 +673,31 @@
     "    Returns\n",
     "    Accuracy(float): the accuracy on the validation lexicon\n",
     "    '''\n",
-    "    acc, n = 0.0, 0\n",
-    "    \n",
     "    ## FILL CODE\n",
-    "\n",
-    "    return acc"
+    "    acc, n = 0.0, len(valid)\n",
+    "    for eng_word,fr_word in valid:\n",
+    "        pred_fr=translate(eng_word, word_vectors_en, word_vectors_fr, mapping)\n",
+    "        if pred_fr==fr_word:\n",
+    "            acc+=1\n",
+    "    return acc/n*100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "evaluate(valid, word_vectors_en, word_vectors_fr, mapping)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.03483"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 64.00%\n"
+     ]
     }
    ],
    "source": [
-    "0.002+0.0022+0.00083+0.0063+0.014+0.0059+0.0036"
+    "print(\"Validation accuracy: %.2f%s\" %( evaluate(valid, word_vectors_en, word_vectors_fr, mapping),\"%\"))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.2553675992192583"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "2355/9222"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "32768"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
