--- a/lab2/Santatriniaina_Avotra_Randrianambinina_intro_to_wordvectors.ipynb
+++ b/lab2/Santatriniaina_Avotra_Randrianambinina_intro_to_wordvectors.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,8 @@
     "    k_nearest_neighbors (list of tuples): [(score, word), (score, word), ....]\n",
     "    '''\n",
     "    k_nearest_neighbors = []\n",
-    "    exclude_words=[]\n",
+    "    x_itself=nearest_neighbor(x,vectors)\n",
+    "    exclude_words=[x_itself]\n",
     "    ## FILL CODE\n",
     "    for l in range(k):\n",
     "        best_word=nearest_neighbor(x,word_vectors,exclude_words)\n",
@@ -230,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -240,11 +241,11 @@
       "\n",
       "cat\n",
       "--------------\n",
-      "cat\t1.000\n",
       "cats\t0.732\n",
       "dog\t0.638\n",
       "pet\t0.573\n",
-      "rabbit\t0.549\n"
+      "rabbit\t0.549\n",
+      "dogs\t0.538\n"
      ]
     }
    ],
@@ -258,6 +259,67 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Another way to find the k_nearest_neighbors\n",
+    "def knn(x, vectors, k):\n",
+    "    '''\n",
+    "    Parameters:\n",
+    "    x (string): word to find its nearest neighbour \n",
+    "    word_vectors (Python dict): {word (string): np-array of word vector}\n",
+    "    k (int): number of nearest neighbours to be found\n",
+    "    \n",
+    "    Returns: \n",
+    "    k_nearest_neighbors (list of tuples): [(score, word), (score, word), ....]\n",
+    "    '''\n",
+    "\n",
+    "    k_nearest_neighbors = None\n",
+    "    ## FILL CODE\n",
+    "    word_scores  =[]\n",
+    "    \n",
+    "    for word, v in vectors.items():\n",
+    "        score = cosine(x, v)\n",
+    "        word_scores.append((score, word))\n",
+    "    #Now, we give the word_scores by ascending order of the score from the tuple above    \n",
+    "    word_scores.sort(key = lambda x: x[0], reverse = True) \n",
+    "    k_nearest_neighbors = word_scores[1:k+1]\n",
+    "        \n",
+    "    return k_nearest_neighbors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "cat\n",
+      "--------------\n",
+      "cats\t0.732\n",
+      "dog\t0.638\n",
+      "pet\t0.573\n",
+      "rabbit\t0.549\n",
+      "dogs\t0.538\n"
+     ]
+    }
+   ],
+   "source": [
+    "knn_cat = knn(word_vectors['cat'], word_vectors, 5)\n",
+    "print('')\n",
+    "print('cat')\n",
+    "print('--------------')\n",
+    "for score, word in knn(word_vectors['cat'], word_vectors, 5):\n",
+    "    print (word + '\\t%.3f' % score)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -268,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,14 +627,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/hr/6w38l07x00n52k06db9zpqz40000gn/T/ipykernel_897/3618655050.py:21: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "/var/folders/hr/6w38l07x00n52k06db9zpqz40000gn/T/ipykernel_5252/3618655050.py:21: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
       "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
       "  M = np.linalg.lstsq(x_en, x_fr)[0]\n"
      ]
@@ -591,16 +653,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'lapin'"
+       "'chiens'"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
