update comment lab3

--- a/lab3/Santatriniaina_Avotra_Randrianambinina_n_gram_models.ipynb
+++ b/lab3/Santatriniaina_Avotra_Randrianambinina_n_gram_models.ipynb
@@ -112,7 +112,7 @@
     "    data_with_unk = []\n",
     "    for sentences in data:   \n",
     "        for (idx , word) in enumerate(sentences):\n",
-    "            #we do not need word in vocab since values of vocab account the word in sentence \n",
+    "            #The condition word in vocab is optionally since a value of vocab account the word in sentence \n",
     "            #in the data as the function load_data():\n",
     "            sentences[idx]=word if word in vocab and vocab[word] > mincount else \"<unk>\"\n",
     "        data_with_unk.append(sentences)\n",
